[workspace]

exclude = [
    "crates/webpki",
    "crates/ring",
]

members = [
    "crates/*",
    "pallets/*",
    "standalone/chain/*",
]

resolver = "2"

# The list of dependencies below (which can be both direct and indirect dependencies) are crates
# that are suspected to be CPU-intensive, and that are unlikely to require debugging (as some of
# their debug info might be missing) or to require to be frequently recompiled. We compile these
# dependencies with `opt-level=3` even in "dev" mode in order to make "dev" mode more usable.
# The majority of these crates are cryptographic libraries.
#
# Note that this does **not** affect crates that depend on Substrate. In other words, if you add
# a dependency on Substrate, you have to copy-paste this list in your own `Cargo.toml` (assuming
# that you want the same list). This list is only relevant when running `cargo build` from within
# the Substrate workspace.
#
# If you see an error mentioning "profile package spec ... did not match any packages", it
# probably concerns this list.
#
# This list is ordered alphabetically.
[profile.dev.package]
blake2 = { opt-level = 3 }
blake2b_simd = { opt-level = 3 }
chacha20poly1305 = { opt-level = 3 }
cranelift-codegen = { opt-level = 3 }
cranelift-wasm = { opt-level = 3 }
crc32fast = { opt-level = 3 }
crossbeam-deque = { opt-level = 3 }
crypto-mac = { opt-level = 3 }
curve25519-dalek = { opt-level = 3 }
ed25519-dalek = { opt-level = 3 }
flate2 = { opt-level = 3 }
futures-channel = { opt-level = 3 }
hashbrown = { opt-level = 3 }
hash-db = { opt-level = 3 }
hmac = { opt-level = 3 }
httparse = { opt-level = 3 }
integer-sqrt = { opt-level = 3 }
bs58 = { opt-level = 3 }
keccak = { opt-level = 3 }
libm = { opt-level = 3 }
librocksdb-sys = { opt-level = 3 }
libsecp256k1 = { opt-level = 3 }
libz-sys = { opt-level = 3 }
mio = { opt-level = 3 }
nalgebra = { opt-level = 3 }
num-bigint = { opt-level = 3 }
parking_lot = { opt-level = 3 }
parking_lot_core = { opt-level = 3 }
percent-encoding = { opt-level = 3 }
primitive-types = { opt-level = 3 }
ring = { opt-level = 3 }
rustls = { opt-level = 3 }
secp256k1 = { opt-level = 3 }
sha2 = { opt-level = 3 }
sha3 = { opt-level = 3 }
smallvec = { opt-level = 3 }
snow = { opt-level = 3 }
twox-hash = { opt-level = 3 }
uint = { opt-level = 3 }
wasmi = { opt-level = 3 }
x25519-dalek = { opt-level = 3 }
yamux = { opt-level = 3 }
zeroize = { opt-level = 3 }

[profile.release]
# Substrate runtime requires unwinding.
panic = "unwind"

[profile.production]
inherits = "release"

# Sacrifice compile speed for execution speed by using optimization flags:

# https://doc.rust-lang.org/rustc/linker-plugin-lto.html
lto = "fat"
# https://doc.rust-lang.org/rustc/codegen-options/index.html#codegen-units
codegen-units = 1


[workspace.dependencies]
# ---- Substrate crates begin ----
#	primitives
sp-core = { git = "https://github.com/CESSProject/substrate", branch = "cess-polkadot-v0.9.42", default-features = false }
# sp-core-hashing = { git = "https://github.com/CESSProject/substrate", branch = "cess-polkadot-v0.9.42", default-features = false }
sp-runtime = { git = "https://github.com/CESSProject/substrate", branch = "cess-polkadot-v0.9.42", default-features = false }
sp-runtime-interface = { git = "https://github.com/CESSProject/substrate", branch = "cess-polkadot-v0.9.42", default-features = false }
sp-keyring = { git = "https://github.com/CESSProject/substrate", branch = "cess-polkadot-v0.9.42", default-features = false }
sp-blockchain = { git = "https://github.com/CESSProject/substrate", branch = "cess-polkadot-v0.9.42", default-features = false }
sp-api = { git = "https://github.com/CESSProject/substrate", branch = "cess-polkadot-v0.9.42", default-features = false }
sp-std = { git = "https://github.com/CESSProject/substrate", branch = "cess-polkadot-v0.9.42", default-features = false }
sp-io = { git = "https://github.com/CESSProject/substrate", branch = "cess-polkadot-v0.9.42", default-features = false }
sp-application-crypto = { git = "https://github.com/CESSProject/substrate", branch = "cess-polkadot-v0.9.42", default-features = false }
# sp-consensus-babe = { git = "https://github.com/CESSProject/substrate", branch = "cess-polkadot-v0.9.42", default-features = false }
sp-externalities = { git = "https://github.com/CESSProject/substrate", branch = "cess-polkadot-v0.9.42", default-features = false }
sp-consensus-grandpa = { git = "https://github.com/CESSProject/substrate", branch = "cess-polkadot-v0.9.42", default-features = false }
sp-authority-discovery = { git = "https://github.com/CESSProject/substrate", branch = "cess-polkadot-v0.9.42", default-features = false }
sp-timestamp = { git = "https://github.com/CESSProject/substrate", branch = "cess-polkadot-v0.9.42", default-features = false }
sp-inherents = { git = "https://github.com/CESSProject/substrate", branch = "cess-polkadot-v0.9.42", default-features = false }
sp-consensus = { git = "https://github.com/CESSProject/substrate", branch = "cess-polkadot-v0.9.42", default-features = false }
sp-transaction-storage-proof = { git = "https://github.com/CESSProject/substrate", branch = "cess-polkadot-v0.9.42", default-features = false }
sp-keystore = { git = "https://github.com/CESSProject/substrate", branch = "cess-polkadot-v0.9.42", default-features = false }
sp-state-machine = { git = "https://github.com/CESSProject/substrate", branch = "cess-polkadot-v0.9.42", default-features = false }
sp-tracing = { git = "https://github.com/CESSProject/substrate", branch = "cess-polkadot-v0.9.42", default-features = false }
sp-trie = { git = "https://github.com/CESSProject/substrate", branch = "cess-polkadot-v0.9.42", default-features = false }
sp-block-builder = { git = "https://github.com/CESSProject/substrate", branch = "cess-polkadot-v0.9.42", default-features = false }
sp-offchain = { git = "https://github.com/CESSProject/substrate", branch = "cess-polkadot-v0.9.42", default-features = false }
sp-staking = { git = "https://github.com/CESSProject/substrate", branch = "cess-polkadot-v0.9.42", default-features = false }
sp-session = { git = "https://github.com/CESSProject/substrate", branch = "cess-polkadot-v0.9.42", default-features = false }
sp-transaction-pool = { git = "https://github.com/CESSProject/substrate", branch = "cess-polkadot-v0.9.42", default-features = false }
sp-version = { git = "https://github.com/CESSProject/substrate", branch = "cess-polkadot-v0.9.42", default-features = false }
sp-rpc = { git = "https://github.com/CESSProject/substrate", branch = "cess-polkadot-v0.9.42", default-features = false }
sp-npos-elections = { git = "https://github.com/CESSProject/substrate", branch = "cess-polkadot-v0.9.42", default-features = false }
node-primitives = { git = "https://github.com/CESSProject/substrate", branch = "cess-polkadot-v0.9.42", default-features = false }
cessp-consensus-rrsc = { git = "https://github.com/CESSProject/substrate", branch = "cess-polkadot-v0.9.42", default-features = false }

#	frames
frame-support = { git = "https://github.com/CESSProject/substrate", branch = "cess-polkadot-v0.9.42", default-features = false }
frame-system = { git = "https://github.com/CESSProject/substrate", branch = "cess-polkadot-v0.9.42", default-features = false }
frame-benchmarking = { git = "https://github.com/CESSProject/substrate", branch = "cess-polkadot-v0.9.42", default-features = false }
frame-executive = { git = "https://github.com/CESSProject/substrate", branch = "cess-polkadot-v0.9.42", default-features = false }
frame-election-provider-support = { git = "https://github.com/CESSProject/substrate", branch = "cess-polkadot-v0.9.42", default-features = false }
frame-system-benchmarking = { git = "https://github.com/CESSProject/substrate", branch = "cess-polkadot-v0.9.42", default-features = false }
frame-try-runtime = { git = "https://github.com/CESSProject/substrate", branch = "cess-polkadot-v0.9.42", default-features = false }
frame-system-rpc-runtime-api = { git = "https://github.com/CESSProject/substrate", branch = "cess-polkadot-v0.9.42", default-features = false }
frame-benchmarking-cli = { git = "https://github.com/CESSProject/substrate", branch = "cess-polkadot-v0.9.42" }
frame-support-test = { git = "https://github.com/CESSProject/substrate", branch = "cess-polkadot-v0.9.42"  }

#	pallets
pallet-assets = { git = "https://github.com/CESSProject/substrate", branch = "cess-polkadot-v0.9.42", default-features = false }
pallet-asset-tx-payment = { git = "https://github.com/CESSProject/substrate", branch = "cess-polkadot-v0.9.42", default-features = false }
pallet-contracts-primitives = { git = "https://github.com/CESSProject/substrate", branch = "cess-polkadot-v0.9.42", default-features = false }
pallet-democracy = { git = "https://github.com/CESSProject/substrate", branch = "cess-polkadot-v0.9.42", default-features = false }
pallet-uniques = { git = "https://github.com/CESSProject/substrate", branch = "cess-polkadot-v0.9.42", default-features = false }
pallet-preimage = { git = "https://github.com/CESSProject/substrate", branch = "cess-polkadot-v0.9.42", default-features = false }
pallet-balances = { git = "https://github.com/CESSProject/substrate", branch = "cess-polkadot-v0.9.42", default-features = false }
pallet-insecure-randomness-collective-flip = { git = "https://github.com/CESSProject/substrate", branch = "cess-polkadot-v0.9.42", default-features = false }
pallet-timestamp = { git = "https://github.com/CESSProject/substrate", branch = "cess-polkadot-v0.9.42", default-features = false }
pallet-scheduler = { git = "https://github.com/CESSProject/substrate", branch = "cess-polkadot-v0.9.42", default-features = false }
pallet-collective = { git = "https://github.com/CESSProject/substrate", branch = "cess-polkadot-v0.9.42", default-features = false }
pallet-contracts = { git = "https://github.com/CESSProject/substrate", branch = "cess-polkadot-v0.9.42", default-features = false }
pallet-im-online = { git = "https://github.com/CESSProject/substrate", branch = "cess-polkadot-v0.9.42", default-features = false }
pallet-sudo = { git = "https://github.com/CESSProject/substrate", branch = "cess-polkadot-v0.9.42", default-features = false }
pallet-treasury = { git = "https://github.com/CESSProject/substrate", branch = "cess-polkadot-v0.9.42", default-features = false }
pallet-transaction-payment = { git = "https://github.com/CESSProject/substrate", branch = "cess-polkadot-v0.9.42", default-features = false }
pallet-transaction-payment-rpc = { git = "https://github.com/CESSProject/substrate", branch = "cess-polkadot-v0.9.42", default-features = false }
pallet-authority-discovery = { git = "https://github.com/CESSProject/substrate", branch = "cess-polkadot-v0.9.42", default-features = false }
pallet-authorship = { git = "https://github.com/CESSProject/substrate", branch = "cess-polkadot-v0.9.42", default-features = false }
# pallet-babe = { git = "https://github.com/CESSProject/substrate", branch = "cess-polkadot-v0.9.42", default-features = false }
pallet-bags-list = { git = "https://github.com/CESSProject/substrate", branch = "cess-polkadot-v0.9.42", default-features = false }
pallet-bounties = { git = "https://github.com/CESSProject/substrate", branch = "cess-polkadot-v0.9.42", default-features = false }
pallet-child-bounties = { git = "https://github.com/CESSProject/substrate", branch = "cess-polkadot-v0.9.42", default-features = false }
pallet-elections-phragmen = { git = "https://github.com/CESSProject/substrate", branch = "cess-polkadot-v0.9.42", default-features = false }
pallet-election-provider-multi-phase = { git = "https://github.com/CESSProject/substrate", branch = "cess-polkadot-v0.9.42", default-features = false }
pallet-fast-unstake = { git = "https://github.com/CESSProject/substrate", branch = "cess-polkadot-v0.9.42", default-features = false }
pallet-grandpa = { git = "https://github.com/CESSProject/substrate", branch = "cess-polkadot-v0.9.42", default-features = false }
pallet-indices = { git = "https://github.com/CESSProject/substrate", branch = "cess-polkadot-v0.9.42", default-features = false }
pallet-identity = { git = "https://github.com/CESSProject/substrate", branch = "cess-polkadot-v0.9.42", default-features = false }
pallet-lottery = { git = "https://github.com/CESSProject/substrate", branch = "cess-polkadot-v0.9.42", default-features = false }
pallet-membership = { git = "https://github.com/CESSProject/substrate", branch = "cess-polkadot-v0.9.42", default-features = false }
pallet-multisig = { git = "https://github.com/CESSProject/substrate", branch = "cess-polkadot-v0.9.42", default-features = false }
pallet-mmr = { git = "https://github.com/CESSProject/substrate", branch = "cess-polkadot-v0.9.42", default-features = false }
pallet-nomination-pools = { git = "https://github.com/CESSProject/substrate", branch = "cess-polkadot-v0.9.42", default-features = false }
pallet-nomination-pools-benchmarking = { git = "https://github.com/CESSProject/substrate", branch = "cess-polkadot-v0.9.42", default-features = false }
pallet-nomination-pools-runtime-api = { git = "https://github.com/CESSProject/substrate", branch = "cess-polkadot-v0.9.42", default-features = false }
pallet-offences = { git = "https://github.com/CESSProject/substrate", branch = "cess-polkadot-v0.9.42", default-features = false }
pallet-offences-benchmarking = { git = "https://github.com/CESSProject/substrate", branch = "cess-polkadot-v0.9.42", default-features = false }
pallet-proxy = { git = "https://github.com/CESSProject/substrate", branch = "cess-polkadot-v0.9.42", default-features = false }
pallet-recovery = { git = "https://github.com/CESSProject/substrate", branch = "cess-polkadot-v0.9.42", default-features = false }
pallet-session = { git = "https://github.com/CESSProject/substrate", branch = "cess-polkadot-v0.9.42", default-features = false, features = ["historical"] }
pallet-session-benchmarking = { git = "https://github.com/CESSProject/substrate", branch = "cess-polkadot-v0.9.42", default-features = false }
# pallet-staking = { git = "https://github.com/CESSProject/substrate", branch = "cess-polkadot-v0.9.42", default-features = false }
pallet-staking-reward-curve = { git = "https://github.com/CESSProject/substrate", branch = "cess-polkadot-v0.9.42", default-features = false }
pallet-society = { git = "https://github.com/CESSProject/substrate", branch = "cess-polkadot-v0.9.42", default-features = false }
pallet-tips = { git = "https://github.com/CESSProject/substrate", branch = "cess-polkadot-v0.9.42", default-features = false }
pallet-utility = { git = "https://github.com/CESSProject/substrate", branch = "cess-polkadot-v0.9.42", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/CESSProject/substrate", branch = "cess-polkadot-v0.9.42", default-features = false }
pallet-vesting = { git = "https://github.com/CESSProject/substrate", branch = "cess-polkadot-v0.9.42", default-features = false }
pallet-rrsc = { git = "https://github.com/CESSProject/substrate", branch = "cess-polkadot-v0.9.42", default-features = false }

#	client dependencies
sc-client-api = { git = "https://github.com/CESSProject/substrate", branch = "cess-polkadot-v0.9.42" }
sc-transaction-pool-api = { git = "https://github.com/CESSProject/substrate", branch = "cess-polkadot-v0.9.42" }
sc-rpc = { git = "https://github.com/CESSProject/substrate", branch = "cess-polkadot-v0.9.42" }
sc-network-common = { git = "https://github.com/CESSProject/substrate", branch = "cess-polkadot-v0.9.42" }
sc-chain-spec = { git = "https://github.com/CESSProject/substrate", branch = "cess-polkadot-v0.9.42" }
sc-consensus = { git = "https://github.com/CESSProject/substrate", branch = "cess-polkadot-v0.9.42" }
sc-transaction-pool = { git = "https://github.com/CESSProject/substrate", branch = "cess-polkadot-v0.9.42" }
sc-offchain = { git = "https://github.com/CESSProject/substrate", branch = "cess-polkadot-v0.9.42" }
sc-network = { git = "https://github.com/CESSProject/substrate", branch = "cess-polkadot-v0.9.42" }
sc-network-sync = { git = "https://github.com/CESSProject/substrate", branch = "cess-polkadot-v0.9.42" }
sc-consensus-slots = { git = "https://github.com/CESSProject/substrate", branch = "cess-polkadot-v0.9.42" }
sc-consensus-babe = { git = "https://github.com/CESSProject/substrate", branch = "cess-polkadot-v0.9.42" }
sc-basic-authorship = { git = "https://github.com/CESSProject/substrate", branch = "cess-polkadot-v0.9.42" }
sc-service = { git = "https://github.com/CESSProject/substrate", branch = "cess-polkadot-v0.9.42" }
sc-telemetry = { git = "https://github.com/CESSProject/substrate", branch = "cess-polkadot-v0.9.42" }
sc-authority-discovery = { git = "https://github.com/CESSProject/substrate", branch = "cess-polkadot-v0.9.42" }
sc-sync-state-rpc = { git = "https://github.com/CESSProject/substrate", branch = "cess-polkadot-v0.9.42" }
sc-sysinfo = { git = "https://github.com/CESSProject/substrate", branch = "cess-polkadot-v0.9.42" }
sc-block-builder = { git = "https://github.com/CESSProject/substrate", branch = "cess-polkadot-v0.9.42" }
sc-client-db = { git = "https://github.com/CESSProject/substrate", branch = "cess-polkadot-v0.9.42" }
sc-consensus-epochs = { git = "https://github.com/CESSProject/substrate", branch = "cess-polkadot-v0.9.42" }
sc-service-test = { git = "https://github.com/CESSProject/substrate", branch = "cess-polkadot-v0.9.42" }
sc-keystore = { git = "https://github.com/CESSProject/substrate", branch = "cess-polkadot-v0.9.42" }
sc-cli = { git = "https://github.com/CESSProject/substrate", branch = "cess-polkadot-v0.9.42" }
sc-executor = { git = "https://github.com/CESSProject/substrate", branch = "cess-polkadot-v0.9.42" }
sc-consensus-babe-rpc = { git = "https://github.com/CESSProject/substrate", branch = "cess-polkadot-v0.9.42" }
sc-consensus-grandpa = { git = "https://github.com/CESSProject/substrate", branch = "cess-polkadot-v0.9.42" }
grandpa = { package = "sc-consensus-grandpa", git = "https://github.com/CESSProject/substrate", branch = "cess-polkadot-v0.9.42" }
sc-consensus-grandpa-rpc = { git = "https://github.com/CESSProject/substrate", branch = "cess-polkadot-v0.9.42" }
sc-rpc-api = { git = "https://github.com/CESSProject/substrate", branch = "cess-polkadot-v0.9.42" }
sc-consensus-manual-seal = { git = "https://github.com/CESSProject/substrate", branch = "cess-polkadot-v0.9.42" }
sc-rpc-spec-v2 = { git = "https://github.com/CESSProject/substrate", branch = "cess-polkadot-v0.9.42" }
cessc-consensus-rrsc = { git = "https://github.com/CESSProject/substrate", branch = "cess-polkadot-v0.9.42" }
cessc-consensus-rrsc-rpc = { git = "https://github.com/CESSProject/substrate", branch = "cess-polkadot-v0.9.42" }
cessc-sync-state-rpc = { git = "https://github.com/CESSProject/substrate", branch = "cess-polkadot-v0.9.42" }

substrate-state-trie-migration-rpc = { git = "https://github.com/CESSProject/substrate", branch = "cess-polkadot-v0.9.42" }
substrate-wasm-builder = { git = "https://github.com/CESSProject/substrate", branch = "cess-polkadot-v0.9.42"  }
node-inspect = { git = "https://github.com/CESSProject/substrate", branch = "cess-polkadot-v0.9.42" }
try-runtime-cli = { git = "https://github.com/CESSProject/substrate", branch = "cess-polkadot-v0.9.42", default-features = false }
substrate-frame-cli = { git = "https://github.com/CESSProject/substrate", branch = "cess-polkadot-v0.9.42" }
substrate-build-script-utils = { git = "https://github.com/CESSProject/substrate", branch = "cess-polkadot-v0.9.42" }
substrate-rpc-client = { git = "https://github.com/CESSProject/substrate", branch = "cess-polkadot-v0.9.42" }
substrate-frame-rpc-system = { git = "https://github.com/CESSProject/substrate", branch = "cess-polkadot-v0.9.42" }
mmr-rpc = { git = "https://github.com/CESSProject/substrate", branch = "cess-polkadot-v0.9.42" }
prometheus-endpoint = { package = "substrate-prometheus-endpoint", git = "https://github.com/CESSProject/substrate", branch = "cess-polkadot-v0.9.42" }
substrate-test-utils = { git = "https://github.com/CESSProject/substrate", branch = "cess-polkadot-v0.9.42" }
# ---- Substrate crates end ----

# ---- Frontier crates begin ----
fp-account = { git = "https://github.com/CESSProject/frontier", branch = "cess-polkadot-v0.9.42", default-features = false }
fp-evm = { git = "https://github.com/CESSProject/frontier", branch = "cess-polkadot-v0.9.42", default-features = false }
fp-rpc = { git = "https://github.com/CESSProject/frontier", branch = "cess-polkadot-v0.9.42", default-features = false }
fp-self-contained = { git = "https://github.com/CESSProject/frontier", branch = "cess-polkadot-v0.9.42", default-features = false }
fp-dynamic-fee = { git = "https://github.com/CESSProject/frontier", branch = "cess-polkadot-v0.9.42", default-features = false }

pallet-base-fee = { git = "https://github.com/CESSProject/frontier", branch = "cess-polkadot-v0.9.42", default-features = false }
pallet-dynamic-fee = { git = "https://github.com/CESSProject/frontier", branch = "cess-polkadot-v0.9.42", default-features = false }
pallet-ethereum = { git = "https://github.com/CESSProject/frontier", branch = "cess-polkadot-v0.9.42", default-features = false }
pallet-evm = { git = "https://github.com/CESSProject/frontier", branch = "cess-polkadot-v0.9.42", default-features = false }
pallet-evm-chain-id = { git = "https://github.com/CESSProject/frontier", branch = "cess-polkadot-v0.9.42", default-features = false }
pallet-evm-precompile-modexp = { git = "https://github.com/CESSProject/frontier", branch = "cess-polkadot-v0.9.42", default-features = false }
pallet-evm-precompile-sha3fips = { git = "https://github.com/CESSProject/frontier", branch = "cess-polkadot-v0.9.42", default-features = false }
pallet-evm-precompile-simple = { git = "https://github.com/CESSProject/frontier", branch = "cess-polkadot-v0.9.42", default-features = false }

fc-cli = { git = "https://github.com/CESSProject/frontier", branch = "cess-polkadot-v0.9.42", default-features = false }
fc-consensus = { git = "https://github.com/CESSProject/frontier", branch = "cess-polkadot-v0.9.42", default-features = false }
fc-db = { git = "https://github.com/CESSProject/frontier", branch = "cess-polkadot-v0.9.42", default-features = false }
fc-mapping-sync = { git = "https://github.com/CESSProject/frontier", branch = "cess-polkadot-v0.9.42", default-features = false }
fc-rpc = { git = "https://github.com/CESSProject/frontier", branch = "cess-polkadot-v0.9.42", default-features = false }
fc-rpc-core = { git = "https://github.com/CESSProject/frontier", branch = "cess-polkadot-v0.9.42", default-features = false }
fc-storage = { git = "https://github.com/CESSProject/frontier", branch = "cess-polkadot-v0.9.42", default-features = false }
# ---- Frontier crates end ----

array-bytes = "4.1"
anyhow = { version = "1", default-features = false }
async-trait = "0.1"
base64 = { version = "0.12", default-features = false, features = ["alloc"] }
bls12_381 = { version = "0.7", default-features = false, features = ["groups", "pairings", "alloc", "experimental"] }
clap = { version = "4.0.32", features = ["derive"] }
futures = "0.3"
getrandom = { version = "0.2.10", default-features = false, features = ["custom"] }
hex-literal = "0.4.1"
hex = { version = "0.4", default-features = false }
jsonrpsee = { version = "0.16" }  # this version of jsonrpsee is used by Substrate"s crates
lazy_static = { version = "1", default-features = false }
libc = "0.2"
log = { version = "0.4", default-features = false }
parity-scale-codec = { version = "3.2.2", default-features = false }
codec = { package = "parity-scale-codec", version = "3.2.2", default-features = false }
pairing = { version = "0.22", default-features = false }
rand = "0.8.5"
rand_chacha = { version = "0.2", default-features = false }
rsa = { version = "0.8.2", default-features = false }
scale-info = { version = "2.5", default-features = false }
serde_json = { version = "1.0", default-features = false }
serde = { version = "1.0", default-features = false }
sha2 = { version = "0.9", default-features = false }

# Cess workspace crates and pallets
cp-cess-common = { path = "crates/common", default-features = false }
cp-scheduler-credit = { path = "crates/scheduler-credit", default-features = false }
cp-enclave-verify = { path = "crates/enclave-verify", default-features = false }
cp-bloom-filter = { path = "crates/bloom-filter", default-features = false }
webpki = { path = "crates/webpki", default-features = false }
pallet-audit = { path = "pallets/audit", default-features = false }
pallet-cacher = { path = "pallets/cacher", default-features = false }
pallet-cess-treasury = { path = "pallets/cess-treasury", default-features = false }
pallet-file-bank = { path = "pallets/file-bank", default-features = false }
pallet-oss = { path = "pallets/oss", default-features = false }
pallet-scheduler-credit = { path = "pallets/scheduler-credit", default-features = false }
pallet-sminer = { path = "pallets/sminer", default-features = false }
pallet-cess-staking = { path = "pallets/staking", default-features = false }
pallet-storage-handler = { path = "pallets/storage-handler", default-features = false }
pallet-tee-worker = { path = "pallets/tee-worker", default-features = false }
cess-node-runtime = { path = "standalone/chain/runtime", default-features = false }